# rust-GNN

./: Cargo.toml  Dockerfile
src/ch02/label_propagation/: main.rs
src/ch02/matrix_factorization/: main.rs
src/common/: layers.rs
